aks/webadmin/dev/webadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webadmin-deployment
  labels:
    app: webadmin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: webadmin
  template:
    metadata:
      labels:
        app: webadmin
        service: webadmin
    spec:
      containers:
        - name: webadmin
          image: otokocerpdevacr.azurecr.io/webadmin:$(Build.BuildId)
          imagePullPolicy: Always
          # securityContext:
          #   runAsUser: 1000
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "0.3"
            limits:
              memory: "500Mi"
              cpu: "0.3"
