aks/webadmin/dev/webadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webadmin-svc
  labels:
    app: otokocwebadmin
    service: webadmin
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: webadmin
