aks/webadmin/dev/webadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webadmin-ingress
  annotations:
    ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls: 
  - hosts:
      - webadmin-dev.otokoc.com.tr
    secretName: tls-otokoc
  ingressClassName: nginx
  rules:
  - host: webadmin-dev.otokoc.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webadmin-svc
            port:
              number: 80
